<resources>
    <string name="app_name">My Todo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other_works">Other Works</string>
    <string name="daily_routine">Daily Routine</string>
    <string name="input_text_hint">Write your work here…</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="today_work">Today\'s work</string>
    <string name="empty">Empty!</string>
    <string name="body">body</string>
    <string name="time">time</string>
    <string name="title">title</string>
    <string name="work_title">Work Title…</string>
    <string name="edit_icon">Edit icon</string>
    <string name="delete_icon">Delete icon</string>
    <string name="check_icon">Check icon</string>
    <string name="finished_works">Finished works</string>
    <string name="sort_by_color">Sort by color</string>
    <string name="delete_all_works">Delete all works</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="sort_by_title">Sort by title</string>
</resources>